--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.17.1",
     "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "express-validator": "^6.12.2",
     "method-override": "^3.0.0",
     "nodemon": "^2.0.12"
   },
